# Mail-Service

./: .env  .gitignore  Cargo.toml
src/: main.rs
src/controllers/: root.rs
src/models/: subscriber.rs
src/services/: database_service.rs  greeting.rs  mod.rs
